Issue #2019345 by johnv: Added workflow_admin_ui now uses classes, too.
Issue #2019345 by johnv: Added workflow.features.inc now includes workflow.deprecated.inc.
Issue #2019345 by johnv: Added workflow.tokens.inc now uses classes, too.
Issue #2019345 by johnv: Added extra methods to Workflow objects.
Issue #2019345 by johnv: Added workflow_access now uses classes, too.
Issue #2019345 by johnv: Added workflow_node_view now uses classes, too.
Issue #2019345 by johnv: Added workflow_revert now uses classes.
Issue #2019345 by johnv: Added workflow_search_api now uses classes.
Issue #2019345 by johnv: Added workflow_vbo now uses classes.
Issue #2019345 by johnv: Added workflow.install now uses classes.
Issue #2019345 by johnv: Fixed error in WorkflowTransition->IsAllowed().
Issue #2019345 by johnv: Added workflow_views now uses classes.
Issue #2019345 by johnv: Fixed notice when trying to load not-existing Workflow or State.
Issue #2019345 by johnv: Added workflow_cleanup now uses WorkflowState class.
Issue #2019345 by johnv: Moved workflow_state functions to workflow.deprecated.inc, since they are all replaced by Workflow State class.
Issue #2116179 by johnv: Moved workflow_type_map functions to own file workflow.node.type_map.inc.
Issue #2019345 by johnv: Fixed notice on workflow_tab_form when a node type has both Workflow_node and Workflow_field enabled.
Issue #2019345 by johnv: Moved code from workflow_admin_ui to Workflow->validate(), and added this check to Field settings form.
Issue #2115199 by johnv: Moved pages from workflow_admin_ui.module to workfow_admin_ui.pages.inc, reducing footprint for all-but-these pages.
Issue #2019345 by johnv: Added a create() function to classes Workflow and WorkflowState.
Issue #2115199 by johnv: Some cosmetic changes in workfow_admin_ui.pages.inc.
Issue #2019345 by johnv: Fixed notice when updating node in certain circumstances.
Issue #2019345 by johnv: Changed function names in workflow_rules to reflect they are Node API only.