@@ -169,8 +169,8 @@ function workflow_cron() {
 
     // A Field API will return a WorkflowItem. A Node API will not.
     $workflowItem = $scheduled_transition->getWorkflowItem();
-    $field_info = ($workflowItem) ? $workflowItem->getField() : array() ;
-    $current_sid = workflow_node_current_state($entity, $entity_type, $field_info);
+    $field = ($workflowItem) ? $workflowItem->getField() : array() ;
+    $current_sid = workflow_node_current_state($entity, $entity_type, $field);
 
     // Make sure transition is still valid; i.e., the node is
     // still in the state it was when the transition was scheduled.
@@ -183,12 +183,12 @@ function workflow_cron() {
       // A watchdog message is created with the result.
       $new_sid = $scheduled_transition->execute($force = TRUE);
 
-      if ($field_info) {
+      if ($field) {
         // Only in case of Workflow Field API (not for Workflow Node API), do a separate update,
         // because $workflowItem only works on Node form and Comment form.
         // @todo: move this to a better place.
         $items[0]['value'] = $new_sid;
-        $field_name = $field_info['field_name'];
+        $field_name = $field['field_name'];
         $entity->{$field_name}['und'] = $items;
         $workflowItem->entitySave($entity_type, $entity);
       }
@@ -426,7 +426,9 @@ function workflow_execute_transition($entity, $new_sid, $comment = NULL, $force 
     return $old_sid;
   }
 
-  $old_sid = ($old_sid) ? $old_sid : workflow_node_current_state($entity, $entity_type, $field_name);
+  $field = $field_name ? field_info_field($field_name) : array();
+
+  $old_sid = ($old_sid) ? $old_sid : workflow_node_current_state($entity, $entity_type, $field);
   $transition = new WorkflowTransition($entity_type, $entity, $field_name, $old_sid, $new_sid, $user->uid, REQUEST_TIME, $comment);
   $new_sid = $transition->execute($force);
   return $new_sid;
@@ -453,20 +455,33 @@ function workflow_get_workflow_options($wid = 0, $grouped = FALSE) {
 }
 
 /**
- * Get the current state of a given node.
+ * Get the current state ID of a given node.
  *
  * @param $entity
  *   The entity to check.
- * @return
+ * @param $entity_type
+ *   The entity_type of the entity to check.
+ * @param $field
+ *   The field_info_field() of the field of the entity to check.
+ *
+ * @return $sid
  *   The ID of the current state.
+ * @todo: add caching to workflow_node_current_state()
  */
 function workflow_node_current_state($entity, $entity_type = 'node', $field = array()) {
   $sid = FALSE;
-  $state = FALSE;
+  static $sids = array();
+
+  // Return cached value of $sid.
+  $entity_id = _workflow_get_entity_id($entity_type, $entity);
+  $field_name = isset($field['field_name']) ? $field['field_name'] : '';
+  if (isset($sids[$entity_type][$entity_id][$field_name])) {
+    $sid = $sids[$entity_type][$entity_id][$field_name];
+    return $sid;
+  }
 
   // Field API: Get current/previous state.
   if ($field) {
-    $field_name = $field['field_name'];
     if (isset($entity->is_new) && $entity->is_new == TRUE) {
       // A new node.
       $workflow = Workflow::load($field['settings']['wid']);
@@ -488,26 +503,25 @@ function workflow_node_current_state($entity, $entity_type = 'node', $field = ar
       $workflow = Workflow::load($field['settings']['wid']);
       $sid = $workflow->getCreationSid();
     }
-    return $sid;
+  }
+  else {
+    // Node API: Get current/previous state.
+    // There is no nid when creating a node.
+    if (!$sid && !empty($entity_id)) {
+      if ($state = workflow_get_workflow_node_by_nid($entity->nid)) {
+        $sid = $state->sid;
+      }
+    }
+    if (!$sid && !empty($entity->type)) {
+      // No current state. Use creation state.
+      if ($workflow = workflow_get_workflows_by_type($entity->type, $entity_type)) {
+        $sid = $workflow->getCreationSid();
+      }
+    }
   }
 
-  // Node API: Get current/previous state.
-  // There is no nid when creating a node.
-  $entity_type = 'node';
-  if (!$sid && !empty($entity->nid)) {
-    $state = workflow_get_workflow_node_by_nid($entity->nid);
-    if ($state) {
-      $sid = $state->sid;
-    }
-  }
-  if (!$sid && !empty($entity->type)) {
-    // No current state. Use creation state.
-    if ($workflow = workflow_get_workflows_by_type($entity->type, $entity_type)) {
-      $sid = $workflow->getCreationSid();
-    }
-  }
+  $sids[$entity_type][$entity_id][$field_name] = $sid;
   return $sid;
-
 }
 
 function workflow_node_previous_state($node) {
@@ -1034,6 +1048,7 @@ function workflow_requirements($phase) {
 /*
  * Determine if the Workflow Form must be shown. 
  * If not, a formatter must be shown, since there are no valid options.
+ * @todo: change interface to workflow_show_form($state, $choices)
  *
  * @param $sid
  *   the current state ID.
